--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,10 @@ python:
   - "3.7"
   - "3.8"
 install:
+  - pip install networkx
   - pip install numpy
+  - pip install pandas
+  - pip install sympy
   - pip install pytest
   - python setup.py install
 script:
