--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ install:
   - pip install pytest
   - python setup.py install
 script:
-  - pytest -v
+  - pytest -v --maxfail=1 --cov={fsic,fsictools,fsic_fortran} --no-cov-on-fail --cov-branch
+  - coverage report -m
