--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ install:
   - pip install numpy
   - pip install pandas
   - pip install sympy
-  - pip install pytest
+  - pip install pytest pytest-cov
   - python setup.py install
 script:
   - pytest -v --maxfail=1 --cov={fsic,fsictools,fsic_fortran} --no-cov-on-fail --cov-branch
