--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
   - "3.6"
   - "3.7"
   - "3.8"
+  - "3.9"
 install:
   - pip install networkx
   - pip install numpy
@@ -14,5 +15,5 @@ install:
   - pip install pytest pytest-cov
   - python setup.py install
 script:
-  - pytest -v --maxfail=1 --cov={fsic,fsictools,fsic_fortran} --no-cov-on-fail --cov-branch
+  - pytest -v --cache-clear --cov={fsic,fsictools,fsic_fortran} --no-cov-on-fail --cov-branch
   - coverage report -m
