--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -31,5 +31,5 @@ jobs:
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
       run: |
-        pytest -v --cache-clear --cov={fsic,fsictools,fsic_fortran} --no-cov-on-fail --cov-branch
+        pytest -v --cache-clear --cov=fsic --no-cov-on-fail --cov-branch
         coverage report -m
