EGS: Update Klein (1950) example with makefile target to download the input data

--- a/examples/klein_1950/makefile
+++ b/examples/klein_1950/makefile
@@ -7,6 +7,9 @@ parameters.csv : estimate_equations.py data.csv
 data.csv : process_data.py TableF10-3.csv
 	python process_data.py
 
+TableF10-3.csv :
+	curl -s -Lk -o TableF10-3.csv http://www.stern.nyu.edu/~wgreene/Text/Edition7/TableF10-3.csv
+
 .PHONY : clean
 clean :
-	rm -f data.csv parameters.csv
+	rm -f TableF10-3.csv data.csv parameters.csv results.png
