--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install -r requirements/minimal.txt
+        python -m pip install -r requirements/minimum.txt
         python -m pip install -r requirements/optional.txt
         python -m pip install -r requirements/development.txt
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
