--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -28,7 +28,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         python -m pip install -r requirements/minimal.txt
-        python -m pip install -r requirements/optional.txt
+        python -m pip install -r requirements/tools.txt
         python -m pip install -r requirements/test.txt
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
     - name: Test with pytest
