--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -13,15 +13,13 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
-        python-version: ['3.7', '3.8', '3.9', '3.10', '3.11', '3.12']
+        python-version: ['3.6', '3.7', '3.8', '3.9', '3.10', '3.11', '3.12']
 
     steps:
     - uses: actions/checkout@v2
-    - name: Install Meson
-      run: sudo apt install meson
     - name: Set up Python ${{ matrix.python-version }}
       uses: actions/setup-python@v2
       with:
@@ -29,6 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install meson
         python -m pip install -r requirements/minimal.txt
         python -m pip install -r requirements/tools.txt
         python -m pip install -r requirements/test.txt
