--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,6 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        sudo apt install ninja-build
         python -m pip install meson
         python -m pip install -r requirements/minimal.txt
         python -m pip install -r requirements/tools.txt
