--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "fsic"
 description = "Tools for macroeconomic modelling in Python"
 license = "MIT"
-license-files = ["LICENSE"]
+license-files = ["LICEN[CS]E*"]
 
 authors = [
   {name = "Chris Thoung", email = "chris.thoung@gmail.com"},
@@ -23,7 +23,6 @@ classifiers = [
 	"Development Status :: 4 - Beta",
 	"Environment :: Console",
 	"Intended Audience :: Science/Research",
-	"License :: OSI Approved :: MIT License",
 	"Operating System :: OS Independent",
 	"Programming Language :: Python",
 	"Programming Language :: Python :: 3 :: Only",
