EGS: Initial commit of Polars example

--- a/examples/_cookbook/makefile
+++ b/examples/_cookbook/makefile
@@ -3,6 +3,7 @@ all :
 	python eval.py
 	python fortran_engine.py
 	python pandas_indexing.py
+	python polars_support.py
 	python progress_bar.py
 	python quickstart.py
 	python reindex.py
